--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,11 +13,19 @@
 <body>
     <h1>page title</h1> 
     <p>test vaibhav</p>
-    <script src="string.js"></script>
+    <!-- <script src="string.js"></script>
     <script src="sandbox.js"></script>
-    <script src="mathsop.js"></script>
-    <script src="array.js"></script>
-    <script src= "boolean.js"></script>
-    <script src = 'Loop.js'></script>
-</body>
+    <script src="mathsop.js"></script> 
+    <script src="array.js"></script> 
+    <script src = 'sorting.js'></script>
+   <script src= "boolean.js"></script>
+    <script src = 'Loop.js'></script> 
+    <script src = 'linked_list.js'></script>
+    <script src = 'dlinked_list.js'></script>
+    <script src = "function.js"></script>
+    <script src = "stack_queue.js"></script> --> 
+    <script src = "tree.js"></script> 
+    <script src = "search.js"></script>
+    <script src="tree1.py"></script>
+</body> 
 </html>
